2013-12-21  Per Bothner  <per@bothner.com>

	* Blob.java: New class, extends U8Vector.
	* Makefile.am: Update accordingly.
	* ByteVector.java (getInputStream): New method.

2013-12-20  Per Bothner  <per@bothner.com>

	* Strings.java (printQuoted): Add escape option value.

	* PrintConsumer.java: Add synchronization.

2013-11-28  Matthieu Vachon <matthieu.o.vachon@gmail.com>

	* TreeList.java: Don't use @Override for a method implementing
	an interface - Java 5 doesn't like it.

2013-11-13  Per Bothner  <per@bothner.com>

	* SimpleVector.java (size): Make protected.

2013-11-10  Per Bothner  <per@bothner.com>

	* Pair.java (lastPair): Make non-final.

2013-11-03  Per Bothner  <per@bothner.com>

	* AbstractSequence.java (nextIndex): Make abstract, rather than
	a circular default that depends on getIndexDifference which
	depends on nextIndex.
	* GeneralArray.java (nextIndex): New implementation.
	* TreeList.java (nextIndex): New implementation.

	* AbstractSequence.java (consume(int,int.Consumer)): New method.

	* TreeList.java (dump): Handle null object entry.

	* SeqPosition.java: Make generic.
	* ExtPosition.java: Likewise.
	* LListPosition.java: Update accordingly.
	(set): Remove now-redundant method.
	* LList.java: Add needed generic parameters.
	* TreeList.java: Likewise.
	* AbstractSequence.java: Likewise.

	* AbstractSequence.java (getNextTypeName): Replace null-turning
	default implementation with one that calls getNextTypeObject.
	* TreeList.java (getNextTypeName): Remove now-redundant method.

	* AbstractSequence.java (createPos): Add default implementation.
	* SimpleVector.java (createPos): Remove redundant implemengtation.
	* GeneralArray1.java (createPos): Likewise.

	* GapVector.java (add): Use setBuffer rather than set.  The
	former may be more efficient, as it doesn't get the old value.

	* GapVector.java (consumePosRange): Fix infinite-recursion thinko.

2013-11-01  Per Bothner  <per@bothner.com>
