@@ -1,3 +1,8 @@
+2014-03-17  Per Bothner  <per@bothner.com>
+
+	* Blob.java (toString): Added some heuristics - for now just
+	check for byte-order mark.
+
 2013-12-21  Per Bothner  <per@bothner.com>
 
 	* Blob.java: New class, extends U8Vector.
